--- a/public/assets/style_login.css
+++ b/public/assets/style_login.css
@@ -1525,8 +1525,8 @@ pre[class*="language-"] {
         --color-brand-200: #c2d6ff;
         --color-brand-300: #9cb9ff;
         --color-brand-400: #7592ff;
-        --color-brand-500: #465fff;
-        --color-brand-600: #3641f5;
+        --color-brand-500: #2b7fff;
+        --color-brand-600: #2b7fff;
         --color-brand-800: #252dae;
         --color-brand-950: #161950;
         --color-blue-light-50: #f0f9ff;
@@ -1613,6 +1613,7 @@ pre[class*="language-"] {
     }
     body {
         line-height: inherit;
+		font-size: 90%;
     }
     hr {
         height: 0;
