--- a/public/assets/style_login.css
+++ b/public/assets/style_login.css
@@ -10880,117 +10880,7 @@ button.swiper-pagination-bullet {
 .swiper-rtl .swiper-button-prev:after {
     content: "next";
 }
-/* Navigation font end */
-.ID-load {
-    width: 100%;
-    height: 100vh;
-    z-index: 1000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+/* ===========================
+   LOADER MYTEMS
+=========================== */
 
-.ID-load > div {
-    text-align: center;
-}
-
-.ID-load .id-load-content {
-    text-align: center;
-    margin-top: 5px;
-    padding-top: 15px;
-    border-top: solid 1px #aaa;
-    white-space: nowrap;
-    display: flex;
-    justify-content: space-between;
-}
-
-.ID-load .id-load-content .id-load-icon {
-    box-sizing: border-box;
-    width: 26px;
-    height: 26px;
-    text-align: center;
-    -moz-filter: grayscale(1);
-    -o-filter: grayscale(1);
-    -ms-filter: grayscale(1);
-    filter: grayscale(1);
-    margin-left: 12px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 5px;
-    animation: pulse 1s ease infinite;
-}
-
-.ID-load .id-load-content .id-load-icon:nth-child(6) {
-    animation-delay: 0.83333s;
-}
-
-.ID-load .id-load-content .id-load-icon:nth-child(5) {
-    animation-delay: 0.66667s;
-}
-
-.ID-load .id-load-content .id-load-icon:nth-child(4) {
-    animation-delay: 0.5s;
-}
-
-.ID-load .id-load-content .id-load-icon:nth-child(3) {
-    animation-delay: 0.33333s;
-}
-
-.ID-load .id-load-content .id-load-icon:nth-child(2) {
-    animation-delay: 0.16667s;
-}
-
-.ID-load .id-load-content .id-load-icon:nth-child(1) {
-    margin-left: 0;
-    animation-delay: 0s;
-}
-
-.ID-load .id-load-content .id-load-icon svg {
-    width: 60%;
-    height: auto;
-}
-
-.ID-load .id-load-content .id-load-icon svg path {
-    fill: #ffffff;
-}
-
-.ID-load .id-load-content .id-shop {
-    background-color: #488fff;
-}
-
-.ID-load .id-load-content .id-cart {
-    background-color: #aa77dd;
-}
-
-.ID-load .id-load-content .id-register {
-    background-color: #7775d9;
-}
-
-.ID-load .id-load-content .id-report {
-    background-color: #17ce7b;
-}
-
-.ID-load .id-load-content .id-sale {
-    background-color: #feaa55;
-}
-
-.ID-load .id-load-content .id-invetory {
-    background-color: #0dd5aa;
-}
-
-@keyframes pulse {
-    0%,
-    50%,
-    100% {
-        transform: scale(1);
-        filter: grayscale(1);
-        opacity: 0.7;
-    }
-
-    25% {
-        transform: scale(1.35);
-        filter: grayscale(0);
-        opacity: 1;
-    }
-}
